--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2131,12 +2131,12 @@
 			height: 250px;			
 		}
 		.fqc{
-			background-image: url(/hsr-tech/assets/img/manual.jpg);
+			background-image: url(/assets/img/manual.jpg);
 			background-size: 700px;
 			background-position: center;
 		}
 		.fqa{
-			background-image: url(/hsr-tech/assets/img/admin.jpg);
+			background-image: url(/assets/img/admin.jpg);
 			background-size: 700px;
 			background-position: center;
 		}
