--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,6 +1,9 @@
 .logo-svg{
-    height: 90%;
-    margin-top: 4px !important;
+    position: absolute;
+    right: 3em;
+    height: 60%;
+    margin-top: 10px !important;
+    top: 0;
 }
 .logo-menu{
     margin-bottom: 1.2em;
@@ -18,7 +21,7 @@ body {
     z-index: 10003 !important;
     top: 0;
     left: 0;
-    background-color: rgb(88,88,88);
+    background-color: #f2f2f2;
     overflow-x: hidden;
     transition: 0.5s;
     padding-top: 60px;
@@ -28,14 +31,12 @@ body {
     padding: 8px 8px 8px 32px;
     text-decoration: none;
     font-size: 20px;
-    color: #ffffff;
+    color: black;
     display: block;
     transition: 0.3s;
 }
-
-.sidenav .options:hover {
-    color: rgb(0,172,174);
-    text-decoration: underline white;
+.sidenav .options:hover {    
+    text-decoration: underline black;
 }
 
 .sidenav .closebtn {
@@ -167,13 +168,14 @@ p{
 }
 .dropdown-container {
     display: none;
-    background-color: #262626;
+    background-color: #585858;
     padding-left: 8px;
 }
 .dropdown-btn{
     margin-left: .8em;
     position: absolute;
     margin-top: -1.8em;
+    color: white;
 }
 .fa-caret-down:hover{
     color: rgb(0,174,172);
