--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,6 +1,10 @@
 @charset "UTF-8";
 @import url(font-awesome.min.css);
 @import "https://fonts.googleapis.com/css?family=Montserrat:700|Open+Sans:300,400|Pacifico";
+@font-face {
+    font-family: openSans;
+    src: url(../fonts/OpenSans-Light.woff);
+}
 
 /*
 	Intensify by TEMPLATED
@@ -1932,6 +1936,7 @@
 		height: 3.5em;
 		line-height: 3.5em;
 		width: 80%;
+		margin-top: 2em;
 		margin-bottom: 1.7em;
 		margin-left: auto;
 		margin-right: auto;
@@ -2688,9 +2693,9 @@
 		-webkit-align-items: center;
 		-ms-align-items: center;
 		align-items: center;
-		background: #fff;
+		background: rgb(0,174,172);
 		cursor: default;
-		height: 6em;
+		height: 4em;
 		left: 0;
 		line-height: 6em;
 		position: fixed;
@@ -2701,19 +2706,18 @@
 		text-align: center;
 	}
 
-		#header .logo {
-			color: #f6755e;
-			font-family: "Pacifico", cursive;
+		#header .logo {			
+			display: block;
+			color: white;
 			font-size: 2.5em;
 			letter-spacing: 2px;
-			margin-top: -5px;
+			margin-top: -.5em;
 			text-decoration: none;
-			display: inline-block;
 		}
 
 		#header nav {
 			position: absolute;
-			top: 0;
+			top: -1em;
 			height: inherit;
 			line-height: inherit;
 		}
