Alteração do css

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,7 +2,7 @@
 <body>    
     <div class="main" id="main">
         <header id="header">
-            <img src="{{ "/assets/fonts/HSRTech_RGB_Cor-cinza.svg" | prepend: site.baseurl}}" alt="" class="logo logo-svg">
+            <img src="{{ "/assets/fonts/HSRTech_RGB_Cor-cinza.svg" | prepend: site.baseurl}}" alt="" class="logo-svg">
         </header>
         <div class="container">
             <div class="row menuPrincipal">
