--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -9,11 +9,6 @@
     margin-bottom: 1.2em;
     padding: 1.2em;
 }
-body {
-    font-family: "Lato", sans-serif;
-    transition: background-color .5s;
-}
-
 .sidenav {
     height: 100%;
     width: 0;
@@ -25,20 +20,23 @@ body {
     overflow-x: hidden;
     transition: 0.5s;
     padding-top: 60px;
+    box-shadow: 1px 0 10px 0px grey;
 }
-
 .sidenav a {
     padding: 8px 8px 8px 32px;
     text-decoration: none;
-    font-size: 20px;
+    font-size: 15px;
     color: black;
     display: block;
     transition: 0.3s;
+    border-top: 1px solid #e0e0e0;    
 }
-.sidenav .options:hover {    
-    text-decoration: underline black;
+.sidenav .options{
+    background: white;
 }
-
+.sidenav a:hover {    
+    color: rgb(0,174,172);
+}
 .sidenav .closebtn {
     position: absolute;
     top: 0;
@@ -46,7 +44,9 @@ body {
     font-size: 36px;
     margin-left: 50px;
 }
-
+#menuList{
+    border-bottom: 1px solid #e0e0e0;
+}
 #main {
     transition: margin-left .5s;
     padding: 16px;
@@ -63,7 +63,10 @@ h1,h2,h3,h4{
 }
 p{
     text-align: justify;
-    color: rgb(88,88,88);
+    color: #000000;
+}
+ol>li{
+    color: #000000;
 }
 #myImg {
     border-radius: 5px;
@@ -86,20 +89,7 @@ p{
     overflow: auto; /* Enable scroll if needed */
     background-color: rgb(0,0,0); /* Fallback color */
     background-color: rgba(0,0,0,0.9); /* Black w/ opacity */
-}
-.bodyOpacity{
-    display: none;
-    position: fixed;
-    z-index: 10002 !important;
-    padding-top: 100px;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    overflow: auto;
-    background-color: rgb(0,0,0);
-    background-color: rgba(0,0,0,0.9);
-}                
+}          
 /* Modal Content (image) */
 .modal-content {
     margin: auto;
@@ -117,7 +107,6 @@ p{
     padding: 10px 0;
     height: 150px;
 }
-
 /* Add Animation */
 .modal-content, #caption {    
     -webkit-animation-name: zoom;
@@ -125,17 +114,14 @@ p{
     animation-name: zoom;
     animation-duration: 0.6s;
 }
-
 @-webkit-keyframes zoom {
     from {-webkit-transform:scale(0)} 
     to {-webkit-transform:scale(1)}
 }
-
 @keyframes zoom {
     from {transform:scale(0)} 
     to {transform:scale(1)}
 }
-
 /* The Close Button */
 .close {
     position: absolute;
@@ -168,15 +154,21 @@ p{
 }
 .dropdown-container {
     display: none;
-    background-color: #585858;
+    background-color: white;
     padding-left: 8px;
 }
 .dropdown-btn{
     margin-left: .8em;
     position: absolute;
-    margin-top: -1.8em;
-    color: white;
+    margin-top: -1.6em;
+    color: grey;
 }
 .fa-caret-down:hover{
     color: rgb(0,174,172);
+}
+.sub-item-menu{
+    margin-left: 1.1em;
+    position: absolute;
+    margin-top: .7em;
+    color: grey;
 }
