--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,8 +1,10 @@
 {% include head.html %}
 <body>                   
     <div class="main" id="main">
-            <header id="header">                
-                <img src="{{ "/assets/fonts/HSRTech_RGB_Cor.svg" | prepend: site.baseurl}}" alt="" class="logo logo-svg">				
+            <header id="header"> 
+                <a href="{{ site.url}}">
+                    <img src="{{ "/assets/fonts/HSRTech_RGB_Cor-cinza.svg" | prepend: site.baseurl}}" alt="" class="logo-svg">				
+                </a>               
             </header>
             <div class="container">          
                 {{ content }}
