--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,6 +2,7 @@
 <body>    
     <div class="main" id="main">
         <header id="header">
+            <a href="" class="logo">Menu Principal</a>
             <img src="{{ "/assets/fonts/HSRTech_RGB_Cor-cinza.svg" | prepend: site.baseurl}}" alt="" class="logo-svg">
         </header>
         <div class="container">
