--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -22,6 +22,15 @@
     padding-top: 60px;
     box-shadow: 1px 0 10px 0px grey;
 }
+.sidenav .pag-principal{    
+    padding: 0px;
+    text-align: center;
+    border-top: none;
+    font-size: 1.3em;
+}
+.sidenav .closebtn:hover{
+    cursor: pointer;
+}
 .sidenav a {
     padding: 8px 8px 8px 32px;
     text-decoration: none;
