--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1695,7 +1695,7 @@
 		font-weight: 700;
 		font-family: "Montserrat", sans-serif;
 		line-height: 1.5;
-		margin: .8em 0 1.2em 0;
+		margin: 0em 0 1.2em 0;
 	}
 
 		h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
