--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -6,7 +6,7 @@
         {%if page.projeto == "fastQuestColeta" %}
             {% for post in site.posts %}
                 {%if post.projeto == "fastQuestColeta" %}
-                    <a href="{{ post.url }}" class="options">{{ post.title }}</a>                           
+                    <a href="{{ post.url }}/" class="options">{{ post.title }}</a>                           
                 {% endif %}        
             {% endfor %}    
         {% else %}        
